--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,7 +12,7 @@
     <string name="validation_name">^[a-zA-ZñÑáéíóúÁÉÍÓÚ\\s]+</string>
     <string name="name_error">Nombre Invalido</string>
 
-    <string name="validation_name_car">[a-zA-Z][0-9]?</string>
+    <string name="validation_name_car">[a-zA-Z]</string>
     <string name="name_car_error">Automovil Invalido</string>
 
     <string name="validation_mileage">[0-9]</string>
@@ -24,7 +24,7 @@
     <string name="validation_service">^[a-zA-ZñÑáéíóúÁÉÍÓÚ\\s]+</string>
     <string name="service_error">Servicio Invalido</string>
 
-    <string name="validation_price">[0-9]$?</string>
+    <string name="validation_price">[0-9]?</string>
     <string name="price_error">Precio Invalido</string>
 
 </resources>
