NEW:Added Firebase In App.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,25 +12,19 @@
     <string name="validation_name">^[a-zA-ZñÑáéíóúÁÉÍÓÚ\\s]+</string>
     <string name="name_error">Nombre Invalido</string>
 
-    <string name="validation_name_car">^[a-zA-ZñÑáéíóúÁÉÍÓÚ\\s]+</string>
+    <string name="validation_name_car">[a-zA-Z][0-9]?</string>
     <string name="name_car_error">Automovil Invalido</string>
 
-    <string name="validation_mileage">[0-9]*</string>
+    <string name="validation_mileage">[0-9]</string>
     <string name="mileage_error">Kilometraje Invalido</string>
 
-    <string name="validation_year">[0-9]*</string>
+    <string name="validation_year">[0-9]</string>
     <string name="year_car_error">Kilometraje Invalido</string>
 
     <string name="validation_service">^[a-zA-ZñÑáéíóúÁÉÍÓÚ\\s]+</string>
     <string name="service_error">Servicio Invalido</string>
 
-    <string name="validation_price">[0-9]*</string>
+    <string name="validation_price">[0-9]$?</string>
     <string name="price_error">Precio Invalido</string>
-    <string name="share_button">COMPARTIR</string>
-    <string name="car_label">Automóvil : </string>
-    <string name="mileage_label">Kilometraje : </string>
-    <string name="year_label">Modelo : </string>
-    <string name="service_label">Servicio : </string>
-    <string name="price_label">Precio Total : </string>
 
 </resources>
